# llm-fastapi-service-4-meeting-minutes

./: .gitignore  .pre-commit-config.yaml  Dockerfile.cuda  README.md  docker-compose.yaml  request_asr_llm.py  request_llm.py  testing.ipynb  vllm-readme.txt
llm_inference_service/: README.md  config.yaml  llm.py  main.py  prompts.py  pyproject.toml  schemas.py  utils.py
output/: output_summary_steroids_120sec.txt  trial.txt  trial_orchestrator.txt
templates/: tool_chat_template_llama3.3_json.jinja
