[tool.poetry]
name = "llm-inference-service"
version = "0.1.0"
description = ""
authors = ["bobbysy <25177772+bobbysy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.11,< 3.13"
vllm = "~v0.6.0"
numpy = "<2.0"
fastapi = "^0.111.0"
pydantic = "^2.10.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle warnings
    "W",
    # mccabe
    "C90",
    # Pylint
    "PL",
    # isort
    "I",
    # Pyflakes
    "F"
]
ignore = [
    "PLR0913",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
